fix: group labels alignment

--- a/app/javascript/frontend/partials/Vehicles/GroupLabels/index.scss
+++ b/app/javascript/frontend/partials/Vehicles/GroupLabels/index.scss
@@ -1,5 +1,7 @@
 .labels {
   display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 
   .label-title {
     margin-top: 4px;
